# simplebool

./: CHANGELOG.md  README.md  cabal.project.local~  new.hs  simplebool.cabal
app/: Main.hs  Parse.hs  Rules.hs  Simplify.hs
