cabal-version:      2.4
name:               simplebool
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Andreas Muehlmann
maintainer:         andi.muehlmann@arcor.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable simplebool
    main-is:          Main.hs

    other-modules:
        Parse
        Simplify

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   app
    default-language: Haskell2010
